<resources>
    <string name="app_name">UdNi-SMS</string>
    <string name="user_profile">User Profile</string>
    <string name="signin">Sign In</string>
    <string name="name">Username</string>
    <string name="add">Add Site</string>
    <string name="title_home">Settings</string>
    <string name="title_dashboard">Control Panel</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_delete">Delete</string>
    <string name="title_delete_rec">Delete Records</string>
    <string name="title_sites">Sites</string>
    <string name="splash_text">GOPRAN</string>
    <string name="pwd">Password</string>
    <string name="Character_Count">Count</string>
    <string name="Splash">AUTO_HOME</string>
    <string name="discon">DISCONNECT AUTO_HOME</string>
    <string name="setRoom">CONFIGURE ROOMS</string>
    <string name="scanWifiAgain">SHOW NAME CHANGE</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="changeSelfNumber">CHANGE SELF NUMBERS</string>
    <string name="changeElevatorCompanyNumber">CHANGE ELEVATOR COMPANY NUMBERS</string>
    <string name="changePanelBuilderNumber">PANEL BUILDER</string>
    <string name="gopran">GOPRAN</string>
    <string name="builder">P. BLDR</string>
    <string name="company">CLIENTS</string>
    <string name="sites">SITES</string>
    <string name="self">SELF</string>
    <string name="dateDisplay">DATE</string>
    <string name="latest">The last data received is as follows</string>
    <string name="show">SHOW CLIENTS&#8230;</string>
    <string name="sms">SHOW RECEIVED SMS&#8230;</string>
    <string name="meaning">SHOW INFORMATION&#8230;</string>
    <string name="deleteDate">DELETE DATE RECORD&#8230;</string>
    <string name="deleteNumber">DELETE NUMBER RECORD&#8230;</string>
    <string name="deleteRecords">DELETE RECORDS&#8230;</string>
    <string name="deleteTable">DELETE TABLE&#8230;</string>
    <string name="showRecords">SHOW USER RECORD</string>
    <string name="deleteSMS">DELETE SMS</string>
    <string name="deleteClient">DELETE CLIENT</string>
    <string name="deleteUser">DELETE USER RECORDS</string>
    <string name="delete">DELETE TABLE</string>
    <string name="dash">----</string>
    <string name="status">STATUS RECEIVED ON:</string>
    <string name="centerAlignment">center</string>
    <string name="calls">C</string>
    <string name="nocalls">-</string>
    <string name="big_double">===============</string>
    <string name="table_title">TABLE TITLE</string>
    <string name="liftErroStatusTable">LIFT ERROR STATUS</string>
    <string name="empty">----</string>
    <string name="user_profile_heading">UdNi-SMS</string>
    <string name="user_profile_title">USER PROFILE</string>
    <string name="name_field">Name</string>
    <string name="company_field">Company</string>
    <string name="email_field">Email</string>
    <string name="phone_field_1">Mobile 1 (10 digits)</string>
    <string name="phone_field_2">Mobile 2 (10 digits)</string>
    <string name="whatsapp_no">WhatsApp No.</string>
    <string name="address1">Address</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">Address Line 3</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="lop_ip">LOP Inputs</string>
    <string name="cbc_ip">CBC Inputs</string>
    <string name="cmd7">Main Card Inputs</string>
    <string name="cmd8">Main Card Terminal Inputs</string>
    <string name="cmd8_L">Terminal Inputs</string>
    <string name="cmd8_H">Terminal Inputs</string>
    <string name="cmd9">Main Card Outputs</string>
    <string name="cmd9_L">Main Card Outputs</string>
    <string name="cmd9_H">Main Card Outputs</string>
    <string name="cmd10">CBC Inputs</string>
    <string name="cmd10_L">CBC Inputs</string>
    <string name="cmd10_H">CBC Inputs</string>
    <string name="cmd11">CBC Outputs</string>
    <string name="cmd11_L">CBC Outputs</string>
    <string name="cmd11_H">CBC Outputs</string>
    <string name="cmd12">FLR Up Keys</string>
    <string name="cmd12_L">FLR Up Keys</string>
    <string name="cmd12_H">FLR Up Keys</string>
    <string name="cmd12_L_M">FLR Up Keys</string>
    <string name="cmd12_H_M">FLR Up Keys</string>
    <string name="cmd13">FLR Dn Keys</string>
    <string name="cmd13_L">FLR Dn Keys</string>
    <string name="cmd13_H">FLR Dn Keys</string>
    <string name="cmd13_L_M">FLR Dn Keys</string>
    <string name="cmd13_H_M">FLR Dn Keys</string>
    <string name="cmd14">Car Keys</string>
    <string name="cmd14_L">Car Keys</string>
    <string name="cmd14_H">Car Keys</string>
    <string name="cmd14_L_M">Car Keys</string>
    <string name="cmd14_H_M">Car Keys</string>
    <string name="cmd15">Lift Status</string>
    <string name="cmd16">Lift Error Status</string>
    <string name="cmd16_L">Lift Error Status</string>
    <string name="cmd16_H">Lift Error Status</string>
    <string name="cmd16_L_M">Lift Error Status</string>
    <string name="cmd16_H_M">Lift Error Status</string>
    <string name="cmd17">Lift EMR Stop</string>
    <string name="cmd18">Lift EMR Stop Release</string>
    <string name="cmd19">Start Monitoring</string>
    <string name="cmd20">Lift EMR Stop Status</string>
    <string name="cmd7_cbd">Inputs</string>
    <string name="cmd8_cbd">Outputs</string>
    <string name="cmd9_cbd">Calls</string>
    <string name="cmd10_cbd">Indications</string>
    <string name="cmd11_cbd">Status</string>
    <string name="cmd12_cbd">Drive Parameters</string>
    <string name="cmd13_cbd">EMR Stop Status</string>
    <string name="cmd14_cbd">Module Status</string>
    <string name="deleteSite">Delete Site</string>
    <string name="company_name">GOPRAN INDUSTRIES</string>
    <string name="siteName">Name of the Site</string>
    <string name="siteNumber">Phone Number (Only 10 digits)</string>
    <string name="siteRegBtn">Register</string>
    <string name="refresh">Refresh</string>
    <string name="editInfo">Edit Site Related Information</string>
    <string name="addSite">Add Site Related Information</string>
    <string name="deleteSiteInfo">Delete Sites Page</string>
    <string name="command">Command</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="chooseSite">Choose Site</string>
    <string name="number1_2">Number #1 or #2?</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="digits">New Number (only 10 digits)</string>
    <string name="count">Cell Number digit count</string>
    <string name="res">Response</string>
    <string name="test">OK</string>
    <string name="contact">Help Center...</string>
    <string name="screen">Screen Info...</string>
    <string name="cnt_dn">Count</string>
    <string name="cur_flr">Current Floor</string>
    <string name="mco">Main Card Outputs</string>
    <string name="brk">BRK</string>
    <string name="dbk">DBK</string>
    <string name="ex1">EX1</string>
    <string name="pre">PRE</string>
    <string name="dir">DIR_RD</string>
    <string name="ard">ARD</string>
    <string name="rcam">RCAM</string>
    <string name="rkm">RKM</string>
    <string name="dc">DC</string>
    <string name="s1">Speed 1</string>
    <string name="s2">Speed 2</string>
    <string name="up">Up</string>
    <string name="dn">Down</string>
    <string name="cbc_op">CBC Outputs</string>
    <string name="gng">Gong</string>
    <string name="dobf">DOBF</string>
    <string name="dcf">DCF</string>
    <string name="dof">DOF</string>
    <string name="fan">Fan</string>
    <string name="lt">Light</string>
    <string name="dobr">DOBR</string>
    <string name="dcr">DCR</string>
    <string name="dor">DOR</string>
    <string name="thy">THY</string>
    <string name="wc">Welcome</string>
    <string name="ex2">EX2</string>
    <string name="fc">Floor Calls</string>
    <string name="u0">UG</string>
    <string name="u1">U1</string>
    <string name="u2">U2</string>
    <string name="u3">U3</string>
    <string name="u4">U4</string>
    <string name="u5">U5</string>
    <string name="u6">U6</string>
    <string name="u7">U7</string>
    <string name="u8">U8</string>
    <string name="u9">U9</string>
    <string name="u10">U10</string>
    <string name="u11">U11</string>
    <string name="u12">U12</string>
    <string name="u13">U13</string>
    <string name="u14">U14</string>
    <string name="u15">U15</string>
    <string name="u16">U16</string>
    <string name="u17">U17</string>
    <string name="u18">U18</string>
    <string name="u19">U19</string>
    <string name="u20">U20</string>
    <string name="u21">U21</string>
    <string name="u22">U22</string>
    <string name="u23">U23</string>
    <string name="u24">U24</string>
    <string name="u25">U25</string>
    <string name="u26">U26</string>
    <string name="u27">U27</string>
    <string name="u28">U28</string>
    <string name="u29">U29</string>
    <string name="u30">U30</string>
    <string name="u31">U31</string>
    <string name="d0">DG</string>
    <string name="d1">D1</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="d4">D4</string>
    <string name="d5">D5</string>
    <string name="d6">D6</string>
    <string name="d7">D7</string>
    <string name="d8">D8</string>
    <string name="d9">D9</string>
    <string name="d10">D10</string>
    <string name="d11">D11</string>
    <string name="d12">D12</string>
    <string name="d13">D13</string>
    <string name="d14">D14</string>
    <string name="d15">D15</string>
    <string name="d16">D16</string>
    <string name="d17">D17</string>
    <string name="d18">D18</string>
    <string name="d19">D19</string>
    <string name="d20">D20</string>
    <string name="d21">D21</string>
    <string name="d22">D22</string>
    <string name="d23">D23</string>
    <string name="d24">D24</string>
    <string name="d25">D25</string>
    <string name="d26">D26</string>
    <string name="d27">D27</string>
    <string name="d28">D28</string>
    <string name="d29">D29</string>
    <string name="d30">D30</string>
    <string name="d31">D31</string>
    <string name="cc">Car Calls</string>
    <string name="c0">CG</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="c4">C4</string>
    <string name="c5">C5</string>
    <string name="c6">C6</string>
    <string name="c7">C7</string>
    <string name="c8">C8</string>
    <string name="c9">C9</string>
    <string name="c10">C10</string>
    <string name="c11">C11</string>
    <string name="c12">C12</string>
    <string name="c13">C13</string>
    <string name="c14">C14</string>
    <string name="c15">C15</string>
    <string name="c16">C16</string>
    <string name="c17">C17</string>
    <string name="c18">C18</string>
    <string name="c19">C19</string>
    <string name="c20">C20</string>
    <string name="c21">C21</string>
    <string name="c22">C22</string>
    <string name="c23">C23</string>
    <string name="c24">C24</string>
    <string name="c25">C25</string>
    <string name="c26">C26</string>
    <string name="c27">C27</string>
    <string name="c28">C28</string>
    <string name="c29">C29</string>
    <string name="c30">C30</string>
    <string name="c31">C31</string>
    <string name="fi">Floor Indicators</string>
    <string name="ui0">UG</string>
    <string name="ui1">U1</string>
    <string name="ui2">U2</string>
    <string name="ui3">U3</string>
    <string name="ui4">U4</string>
    <string name="ui5">U5</string>
    <string name="ui6">U6</string>
    <string name="ui7">U7</string>
    <string name="ui8">U8</string>
    <string name="ui9">U9</string>
    <string name="ui10">U10</string>
    <string name="ui11">U11</string>
    <string name="ui12">U12</string>
    <string name="ui13">U13</string>
    <string name="ui14">U14</string>
</resources>