<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_udni_sms_login_logo"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/signIn"
        android:layout_marginTop="35dp"
        android:textSize="25sp"
        android:backgroundTint="@color/white"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        />
    <TableLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="55dp"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">
            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_name_svg"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/editUserID"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/Gray"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp">
            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_pwd_icon_svg"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/Gray"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:inputType="textPassword"/>
        </TableRow>
    </TableLayout>
    <CheckBox
        android:layout_marginTop="15dp"
        android:layout_marginLeft="55dp"
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show password"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:onClick="onCheckboxClicked"/>
    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/loginBtn"
        android:background="@drawable/edit_border_white"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="LOGIN"/>
</LinearLayout>