<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".CreateUserActivity"
    android:background="@drawable/bg"
    android:scrollbars="vertical">
    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_icon_svg3"
            />
        <TableLayout
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <!--
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/round"
                    />
                -->
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_name_svg" />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/name"
                    android:hint="@string/name_field"
                    android:textColorHint="@color/Gray"
                    android:backgroundTint="@color/white"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_company_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/company"
                    android:backgroundTint="@color/white"
                    android:hint="@string/company_field"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="text"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/email"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email_field"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="textEmailAddress"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_mobile_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/mobile1"
                    android:backgroundTint="@color/white"
                    android:hint="@string/phone_field_1"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="number"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_mobile_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/mobile2"
                    android:backgroundTint="@color/white"
                    android:hint="@string/phone_field_2"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="number"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_whatsapp_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:id="@+id/whatsAppNum"
                    android:backgroundTint="@color/white"
                    android:hint="@string/whatsapp_no"
                    android:textColorHint="@color/Gray"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:inputType="number"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_address_svg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:hint="@string/address1"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/Gray"
                    android:textColor="@color/White"
                    android:id="@+id/adds_line_1"
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/Gray"
                    android:textColor="@color/White"
                    android:id="@+id/adds_line_2"
                    android:backgroundTint="@color/white"
                    android:inputType="text"/>
            </TableRow>
            <!--
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/Gray"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/White"
                    android:id="@+id/adds_line_3"
                    android:inputType="text"/>
            </TableRow>
            -->
        </TableLayout>
        <Button
            android:layout_marginTop="15sp"
            android:id="@+id/doneButton"
            android:layout_width="150dp"
            android:textColor="@color/white"
            android:textColorHint="@color/Gray"
            android:textSize="20sp"
            android:layout_height="30dp"
            android:text="Submit"
            android:background="@drawable/edit_border_white"
            />
    </LinearLayout>
</ScrollView>